# gerolamino

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  bun.nix  flake.nix  nx.json  package.json  result  tsconfig.base.json  tsconfig.json  vitest.config.ts
.cursor/agents/: ci-monitor-subagent.md
.cursor/commands/: monitor-ci.md
.devenv/: profile  run  tasks.db-shm  tasks.db-wal
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 6shr26vnw9xcng9n6knpv3g5mlbqwsc1-source  6sr5gjiqka9lw5pp65q65gsi4vwvykqd-source  89x3wc8qxfnagxqcjdbdxvmddzgqhykq-source  9y5aq4jl6v1jdxbd1cjsb3qzlxbr9lm4-source  ccsb5xyihjf7b377k5rzkqc16qc6pqd1-source  gfsnfjvm197ha6c06n46shx5l56jr3v9-source  wygnldpfirbkskf6qpjbghvaqh3kkczb-source  wzfyksysdzm7dlx5hjm5xbj53grpdn1w-source  zy2n81j7dpkbs79grhwihp38j755ifwx-source
.github/agents/: ci-monitor-subagent.agent.md
.github/prompts/: monitor-ci.prompt.md
.github/runner/: Containerfile
.github/skills/: algorithmic-art  brand-guidelines  canvas-design  claude-api  doc-coauthoring  docx  frontend-design  internal-comms  mcp-builder  pdf  pptx  skill-creator  slack-gif-creator  theme-factory  web-artifacts-builder  xlsx  (+1 more)
docs/: architecture.md  deployment.md
haskell/lsm-ffi/: lsm-ffi.cabal
haskell/lsm-ffi/src/: LsmFFI.hs
haskell/lsm-ffi/zig-init/: bridge.zig  init.c  init.zig
nix/: cbor-schema.nix  default.nix  wasm-plexer.nix
specs/: agda-ledger-specs  complete-ledger.txt  consensus.txt  conway-ledger.txt  mithril.txt  network-spec.txt
(+66 files in other folders)
